@@ -113,6 +113,11 @@ add_custom_target (union_map_union_hh
         -o ${BUILD_DIRECTORY}/union_map_union.hh -n umu
     DEPENDS avrogencpp)
 
+add_custom_target (union_conflict_hh
+    COMMAND avrogencpp -i jsonschemas/union_conflict
+        -o ${BUILD_DIRECTORY}/union_conflict.hh -n uc -U
+    DEPENDS avrogencpp)
+
 add_custom_target (recursive_hh
     COMMAND avrogencpp -i jsonschemas/recursive
         -o ${BUILD_DIRECTORY}/recursive.hh -n rec
@@ -154,8 +159,8 @@ target_link_libraries (testgentest avrocpp ${Boost_LIBRARIES})
 
 add_executable (AvrogencppTests test/AvrogencppTests.cc)
 add_dependencies (AvrogencppTests bigrecord_hh bigrecord2_hh
-    union_array_union_hh union_map_union_hh recursive_hh reuse_hh
-    circulardep_hh)
+    union_array_union_hh union_map_union_hh union_conflict_hh
+    recursive_hh reuse_hh circulardep_hh)
 target_link_libraries (AvrogencppTests avrocpp ${BOOST_LIBRARIES})
 
 add_executable (DataFileTests test/DataFileTests.cc)
